fix: credits screen overflow

--- a/src/style.css
+++ b/src/style.css
@@ -256,3 +256,7 @@ option {
     align-items: center;
     margin-right: 1vw;
 }
+
+li {
+    overflow-wrap: anywhere;
+}
